# LiteRT-LM_test-env

./: .bazelrc  02102026_patch  BUILD.stb  CMakeLists.txt  PATCH.tensorflow  README.md  WORKSPACE  cargo-bazel-lock.json  cmake_smoke_test.sh  patch_cmake_test  smoke_test.sh  version.bzl
.github/workflows/: ci-build-cmake.yml  ci-build-mac.yml  ci-build-win.yml  ci-build.yml  mark_stale.yml
android/: README.md
build_config/: BUILD
c/: BUILD  CMakeLists.txt  engine.cc  engine.h  engine_test.cc  litert_lm_logging.cc  litert_lm_logging.h
cmake/: README.md
cmake/docs/: container.md
cmake/modules/: collect_dependencies.cmake  fetch_content.cmake  generators.cmake  macros.cmake  utils.cmake
cmake/modules/generators/: generate_cxxbridge.cmake  generate_protobuf.cmake
cmake/scripts/: verify_install.cmake
docs/: constrained_decoding.md  conversation.md  tool_use.md
kotlin/: README.md
prebuilt/ios_arm64/: libGemmaModelConstraintProvider.dylib
prebuilt/ios_sim_arm64/: libGemmaModelConstraintProvider.dylib
prebuilt/macos_arm64/: libGemmaModelConstraintProvider.dylib  libLiteRt.dylib  libLiteRtMetalAccelerator.dylib  libLiteRtTopKWebGpuSampler.dylib  libLiteRtWebGpuAccelerator.dylib
runtime/components/: BUILD  huggingface_tokenizer.cc  huggingface_tokenizer.h  huggingface_tokenizer_test.cc  lora.cc  lora.h  lora_manager.cc  lora_manager.h  lora_manager_test.cc  lora_test.cc  model_resources.h  model_resources_litert_lm.cc  model_resources_litert_lm.h  model_resources_task.cc  model_resources_task.h  model_resources_test.cc  prompt_template.cc  prompt_template.h  prompt_template_test.cc  sampler.h  sampler_factory.cc  sampler_factory_failed_dlopen_test.cc  sampling_cpu_util.cc  sampling_cpu_util.h  sampling_cpu_util_test.cc  scoring_cpu_util.cc  sentencepiece_tokenizer.cc  sentencepiece_tokenizer.h  sentencepiece_tokenizer_test.cc  stop_token_detector.h  tokenizer.h  tokenizer_test.cc
runtime/components/constrained_decoding/: BUILD  CMakeLists.txt  bitmap.h  constrained_decoder.cc  constrained_decoder.h  constrained_decoder_test.cc  constraint.h  constraint_provider.h  constraint_provider_config.h  constraint_provider_factory.cc  constraint_provider_factory.h  fake_constraint.cc  (+18 more)
runtime/conversation/: BUILD  conversation.cc  conversation.h  conversation_test.cc  internal_callback_util.cc  internal_callback_util.h  internal_callback_util_test.cc  io_types.cc  io_types.h  prompt_utils.cc  prompt_utils.h
runtime/core/: BUILD  engine_advanced_impl.cc  engine_advanced_impl_test.cc  engine_advanced_legacy_impl.cc  engine_impl.cc  engine_impl_test.cc  engine_legacy_impl.cc  pipeline.cc  pipeline.h  pipeline_test.cc  session_advanced.cc  session_advanced.h  session_advanced_test.cc  session_basic.cc  session_basic.h  session_basic_test.cc  session_factory.cc  session_factory.h  session_factory_test.cc  session_utils.cc  session_utils.h  session_utils_test.cc  tasks.cc  tasks.h  tasks_test.cc
runtime/engine/: BUILD  engine.h  engine_factory.h  engine_settings.cc  engine_settings.h  engine_settings_test.cc  io_types.cc  io_types.h  io_types_test.cc  litert_lm_advanced_main.cc  litert_lm_lib.cc  litert_lm_lib.h  litert_lm_lib_test.cc  litert_lm_main.cc  shared_flags.cc  shared_flags.h
runtime/executor/: BUILD  CMakeLists.txt  audio_executor_base.h  audio_executor_settings.cc  audio_executor_settings.h  audio_executor_settings_test.cc  audio_executor_utils.cc  audio_litert_compiled_model_executor.cc  audio_litert_compiled_model_executor.h  audio_litert_compiled_model_executor_test.cc  executor_settings_base.cc  executor_settings_base.h  executor_settings_base_test.cc  fake_llm_executor.cc  fake_llm_executor.h  fake_llm_executor_test.cc  litert_compiled_model_executor_utils.cc  litert_compiled_model_executor_utils.h  litert_compiled_model_executor_utils_test.cc  llm_executor_base.h  llm_executor_io_types.h  llm_executor_io_types_test.cc  llm_executor_settings.cc  llm_executor_settings.h  llm_executor_settings_test.cc  llm_executor_settings_utils.cc  llm_executor_settings_utils.h  llm_executor_settings_utils_test.cc  llm_litert_compiled_model_cache_utils.cc  llm_litert_compiled_model_cache_utils.h  llm_litert_compiled_model_cache_utils_test.cc  llm_litert_compiled_model_executor.cc  llm_litert_compiled_model_executor.h  llm_litert_compiled_model_executor_factory.cc  llm_litert_compiled_model_executor_factory_test.cc  llm_litert_compiled_model_executor_test.cc  llm_litert_npu_compiled_model_executor.cc  llm_litert_npu_compiled_model_executor.h  magic_number_configs_helper.cc  magic_number_configs_helper.h  (+8 more)
runtime/framework/: BUILD  threadpool.cc  worker_thread.cc  worker_thread_pthread.cc
runtime/proto/: BUILD  llm_metadata.proto  llm_model_type.proto  sampler_params.proto  token.proto
runtime/testdata/: BUILD  test_lm_lora.task
runtime/util/: BUILD  convert_tensor_buffer.h  convert_tensor_buffer_test.cc  executor_data_util.cc  executor_data_util_test.cc  file_format_util.cc  file_util.cc  file_util.h  file_util_test.cc  litert_lm_loader.h  litert_lm_loader_test.cc  logging.h  logging_test.cc  lora_data.cc  lora_data_test.cc  lora_util.cc  memory_mapped_file.h  memory_mapped_file_posix.cc  memory_mapped_file_test.cc  memory_mapped_file_win.cc  metadata_util.cc  model_type_utils.cc  model_type_utils_test.cc  status_macros.h  status_macros_test.cc  tensor_buffer_util.cc  tensor_buffer_util.h  tensor_buffer_util_test.cc  test_utils.h
rust/: BUILD
schema/: CMakeLists.txt
schema/cc/: BUILD  CMakeLists.txt  litertlm_export_main.cc  litertlm_peek.cc  litertlm_writer.cc  litertlm_writer_test.cc  litertlm_writer_utils.cc  litertlm_writer_utils.h
schema/core/: BUILD  CMakeLists.txt  litertlm_export.cc  litertlm_export.h  litertlm_header_schema.fbs  litertlm_read.cc  litertlm_read_test.cc  litertlm_section.h  litertlm_utils.cc
schema/py/: BUILD  litertlm_builder.py  litertlm_builder_test.py  litertlm_core_test.py  litertlm_peek.py  litertlm_peek_main.py
schema/testdata/: NOTES  llm_metadata.pbtext
src/: lib.rs
test_data/gemini_v3_2b_august_launch_final/: BUILD
(+96 files in other folders)
